--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'java'
     id("xyz.jpenilla.run-paper") version "2.3.1"
+    id("com.gradleup.shadow") version "9.2.2"
 }
 
 group = 'com.github.bradleywoodrs'
@@ -8,16 +9,9 @@ version = '1.0'
 
 repositories {
     mavenCentral()
-    maven {
-        name = "papermc-repo"
-        url = "https://repo.papermc.io/repository/maven-public/"
-    }
-    maven {
-        url 'https://jitpack.io'
-    }
-    maven {
-        url = 'https://repo.extendedclip.com/releases/'
-    }
+    maven { name = "papermc-repo"; url = "https://repo.papermc.io/repository/maven-public/" }
+    maven { url 'https://jitpack.io' }
+    maven { url = 'https://repo.extendedclip.com/releases/' }
 }
 
 dependencies {
@@ -27,13 +21,12 @@ dependencies {
     }
     implementation 'com.github.Zrips:CMILib:1.4.7.4'
     compileOnly 'me.clip:placeholderapi:2.11.6'
+
+    implementation 'com.zaxxer:HikariCP:5.0.1'
 }
 
 tasks {
     runServer {
-        // Configure the Minecraft version for our task.
-        // This is the only required configuration besides applying the plugin.
-        // Your plugin's jar (or shadowJar if present) will be used automatically.
         minecraftVersion("1.21")
     }
 }
@@ -50,7 +43,6 @@ java {
 
 tasks.withType(JavaCompile).configureEach {
     options.encoding = 'UTF-8'
-
     if (targetJavaVersion >= 10 || JavaVersion.current().isJava10Compatible()) {
         options.release.set(targetJavaVersion)
     }
@@ -63,4 +55,12 @@ processResources {
     filesMatching('plugin.yml') {
         expand props
     }
+}
+
+tasks.named('shadowJar') {
+    archiveBaseName.set('mangoplaceholders')
+    archiveClassifier.set('')
+    archiveVersion.set(version)
+    mergeServiceFiles()
+    relocate 'com.zaxxer.hikari', 'com.github.bradleywoodrs.shadow.hikari'
 }
